--- a/00_Tool/Nmap/ポート状態一覧.md
+++ b/00_Tool/Nmap/ポート状態一覧.md
@@ -7,3 +7,9 @@
 - そのポートで起動しているサービス名を表示
 
 ![dd](2024-06-09-08-12-59.png)
+
+![](2024-06-09-08-16-13.png)
+![](images/20240609_08-2146.png)
+![](images/20240609_08-2203.png)
+
+![](../../images/20240609_08-2836.png)
