--- a/00_Tool/Nmap/ポート状態一覧.md
+++ b/00_Tool/Nmap/ポート状態一覧.md
@@ -1,15 +1,11 @@
 ## ポート状態一覧
 ### PORT
-- ポート番号/プロトコルの順で表示される
+> ポート番号/プロトコルの順で表示される
 ### STATE
-- ポートの開放、閉鎖等の状態を表示
+> ポートの開放、閉鎖等の状態を表示
 ### SERVICE
-- そのポートで起動しているサービス名を表示
+> そのポートで起動しているサービス名を表示
 
-![dd](2024-06-09-08-12-59.png)
+![](../../images/20240609_08-3133.png)
 
-![](2024-06-09-08-16-13.png)
-![](images/20240609_08-2146.png)
-![](images/20240609_08-2203.png)
 
-![](../../images/20240609_08-2836.png)
