--- a/00_Tool/NSE/スクリプト探索.md
+++ b/00_Tool/NSE/スクリプト探索.md
@@ -70,7 +70,7 @@ Entry { filename = "tftp-version.nse", categories = { "default", "safe", "versio
 grep -rl <探索したい文字列> /usr/share/nmap/scripts
 
 ```
-`grep`で/usr/share/nmap/scripts`ディレクトリ内にある探索文字列が含まれるファイルを抽出する。  
+`grep`で`/usr/share/nmap/scripts`ディレクトリ内にある探索文字列が含まれるファイルを抽出する。  
 `-r`:ディレクトリを指定した場合は、そのサブディレクトリ内も検索する  
 `-l`:一致するものを含むファイル名のみ抽出  
 
