--- a/03_Service攻略法/SMTP/基本.md
+++ b/03_Service攻略法/SMTP/基本.md
@@ -1,8 +1,8 @@
 ## 1.メールの基本  
-まず混乱が無いように、メールの送受信を行うに当たり、`構成すべきもの`とメールのやり取りを行う`通信プロトコル`とを棲み分けて理解した方が分かり易いと思料。  
+まず混乱が無いように、メールの送受信を行うに当たり、`構成要素`と`通信プロトコル`とを棲み分けて理解した方が分かり易いと思料。  
   
-## 2.構成すべきもの
-まずは一覧としては以下の通り。
+## 2.構成要素
+要素としては以下の通り。
 - MUA
 - SMTPサーバー
 - POP/IMAPサーバー  
@@ -53,5 +53,11 @@
 - pop3：`110番ポート`、imap4：`143番ポート`を使用
 - メールボックスにあるメールをMUAへ送る際に用いられるプロトコル  
   
-
-![メール転送図](../../images/20240612_14-629.png)
+## 3.メール送受信の流れ
+1. MUAからドメイン内のMTAへsmtp通信でメールを転送
+2. メールの転送を受けたMTAはDNSなどで名前解決をした後、SMTP通信で送信先のMTAへメールを転送
+3. MTAがメールの転送を受けたことを確認したMDAは、メールボックスにメールを配送
+4. メールボックスに新たなメールが来たことを確認したMRAはpop3/imap4の通信でMUAにメールを転送（pop場合）、あるいは通知（imapの場合）  
+  
+![メール転送図](../../images/20240612_14-629.png)  
+  
