--- a/03_Service攻略法/SMTP/基本.md
+++ b/03_Service攻略法/SMTP/基本.md
@@ -53,11 +53,17 @@
 - pop3：`110番ポート`、imap4：`143番ポート`を使用
 - メールボックスにあるメールをMUAへ送る際に用いられるプロトコル  
   
-## 3.メール送受信の流れ
+## 4.メール送受信の流れ
 1. MUAからドメイン内のMTAへsmtp通信でメールを転送
 2. メールの転送を受けたMTAはDNSなどで名前解決をした後、SMTP通信で送信先のMTAへメールを転送
 3. MTAがメールの転送を受けたことを確認したMDAは、メールボックスにメールを配送
 4. メールボックスに新たなメールが来たことを確認したMRAはpop3/imap4の通信でMUAにメールを転送（pop場合）、あるいは通知（imapの場合）  
   
 ![メール転送図](../../images/20240612_14-629.png)  
+  
+## 5.参考
+[SMTPサーバとPOPサーバの実験を交えた詳解 - Qiita](https://qiita.com/d-ebi/items/0809dd1aaed763b7eb66#0-%E3%81%93%E3%81%AE%E8%A8%98%E4%BA%8B%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6)  
+↑迷ったらこれ！  
+  
+[初心者がメールサーバの誤解を解いた話 - Qiita](https://qiita.com/N-line/items/fe1e80497bef34d79443)  
   
